# NYC-Taxi-Data-Platform

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
airflow/: Dockerfile
configs/: logging.yml  pipeline.yml
dags/: nyc_taxi_pipeline_dag.py
dbt/nyc_taxi/: Dockerfile  dbt_project.yml  profiles.yml
dbt/nyc_taxi/models/: schema.yml  sources.yml
dbt/nyc_taxi/seeds/: README.md  payment_type.csv  taxi_zone_lookup.csv  vendor.csv
docs/: architecture.mmd  data_dictionary.md  design.md  pr_description.md  presentation_outline.md  runbook.md  superset_dashboard.md
scripts/: check_dataset_size.py  check_source_available.py  create_clickhouse_tables.py  create_clickhouse_tables.sql  superset_clickhouse_uri.py
src/nyc_taxi_pipeline/: __init__.py  cli.py  config.py  logging_utils.py  metrics.py
src/nyc_taxi_pipeline/ingestion/: __init__.py  dataset_size.py  download.py  manifest.py  (+1 more)
superset/: Dockerfile
superset/dashboard_export/: README.md
tests/integration/: test_sample_pipeline.py
tests/unit/: test_airflow_dag.py  test_bronze.py  test_cli.py  test_clickhouse_load.py  test_config.py  test_dataset_size.py  test_dbt_project.py  test_deduplication.py  test_derived_columns.py  test_logging_utils.py  test_manifest.py  test_metrics.py  test_package_smoke.py  test_schema_mapping.py  test_silver_transform.py  test_source_discovery.py  test_superset_clickhouse_uri.py  test_trip_id.py  test_validation_rules.py
(+24 files in other folders)
