[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-taxi-data-platform"
version = "0.1.0"
description = "Engineering-grade NYC TLC taxi data platform for a Data Engineer internship entrance project."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Nexlab Data Engineer Candidate" }]
dependencies = [
    "click>=8.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "requests>=2.32",
]

[project.optional-dependencies]
spark = [
    "delta-spark>=3.2,<4.0",
    "pyarrow>=15.0",
    "pyspark>=3.5,<3.6",
]
serving = [
    "clickhouse-connect>=0.7",
    "dbt-clickhouse>=1.8,<1.9",
]
dev = [
    "black>=24.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "dags", "scripts"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "PL",
    "RUF",
]
ignore = [
    "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that exercise multiple pipeline components",
    "spark: tests that require a Spark runtime",
]

